--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: default
     <div class="thumbnail">
         <a href="{{ site.baseurl }}{{ project.url }}">
         {% if project.img %}
-            <img class="thumbnail" src="{{ project.img }}"/>
+            <img class="thumbnail" style="left:{{ project.offsetx }} !important; top:{{ project.offsety }} !important;" src="{{ project.img }}"/>
         {% else %}
             <div class="thumbnail blankbox"></div>
         {% endif %}    
