--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@ layout: default
 
 <div>
     <ul id="projectlist">
-        <li>3D</li>
-        <li>Art</li>
-        <li>Photography</li>
-        <li>Programming</li>
+        <button class="btn active" onclick="filterSelection('all')">All</button>
+        <button class="btn" onclick="filterSelection('art')">Art</button>
+        <button class="btn" onclick="filterSelection('photography')">Photography</button>
+        <button class="btn" onclick="filterSelection('3d')">3D</button>
+        <button class="btn" onclick="filterSelection('programming')">Programming</button>
     </ul>  
 </div>
 
