--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ layout: default
         <button class="btn" onclick="filterSelection('photography')">Photography</button>
         <button class="btn" onclick="filterSelection('3d')">3D</button>
         <button class="btn" onclick="filterSelection('programming')">Programming</button>
+        <button class="btn" onclick="filterSelection('gamedev')">Gamedev</button>
     </ul>  
 </div>
 
